Databased moved to LINQ.

--- a/TelegramDating/App.config
+++ b/TelegramDating/App.config
@@ -3,7 +3,9 @@
     <configSections>
     </configSections>
     <connectionStrings>
-        <add name="TelegramDating.Properties.Settings.DatabaseConnectionString"
+        <add name="TelegramDating.Properties.Settings.DatabaseDebugConnection"
+            connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|..\..\Database.mdf;Integrated Security=True" />
+        <add name="TelegramDating.Properties.Settings.DatabaseConnection"
             connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\Database.mdf;Integrated Security=True"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
