--- a/.gitignore
+++ b/.gitignore
@@ -222,9 +222,9 @@ UpgradeLog*.XML
 UpgradeLog*.htm
 
 # SQL Server files
-*.mdf
-*.ldf
-*.ndf
+!*.mdf
+!*.ldf
+!*.ndf
 
 # Business Intelligence projects
 *.rdl.data
