--- a/TelegramDating/TelegramDating.csproj
+++ b/TelegramDating/TelegramDating.csproj
@@ -66,14 +66,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Database.cs" />
-    <Compile Include="Models\Bot.cs" />
+    <Compile Include="Models\BotWorker.cs" />
     <Compile Include="Models\Commands\Command.cs" />
     <Compile Include="Models\Commands\NoCommand.cs" />
     <Compile Include="Models\Commands\ResetCommand.cs" />
     <Compile Include="Models\Commands\StartCommand.cs" />
     <Compile Include="Models\Enums\SearchOptions.cs" />
     <Compile Include="Models\MessageHandler.cs" />
-    <Compile Include="Models\Photo.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Models\Enums\State.cs" />
