--- a/TelegramDating/TelegramDating.csproj
+++ b/TelegramDating/TelegramDating.csproj
@@ -36,7 +36,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <LangVersion>7.1</LangVersion>
+    <LangVersion>latest</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -46,12 +46,20 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <LangVersion>latest</LangVersion>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-      <HintPath>..\packages\Newtonsoft.Json.10.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
+    <Reference Include="Newtonsoft.Json, Version=11.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.11.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data.Linq" />
     <Reference Include="System.Xml.Linq" />
@@ -60,23 +68,37 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
-    <Reference Include="Telegram.Bot, Version=13.4.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Telegram.Bot.13.4.0\lib\net45\Telegram.Bot.dll</HintPath>
+    <Reference Include="Telegram.Bot, Version=14.8.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\Telegram.Bot.14.8.0\lib\net45\Telegram.Bot.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Database.cs" />
-    <Compile Include="Models\BotWorker.cs" />
-    <Compile Include="Models\Commands\Command.cs" />
-    <Compile Include="Models\Commands\NoCommand.cs" />
-    <Compile Include="Models\Commands\ResetCommand.cs" />
-    <Compile Include="Models\Commands\StartCommand.cs" />
-    <Compile Include="Models\Enums\SearchOptions.cs" />
-    <Compile Include="Models\MessageHandler.cs" />
+    <Compile Include="Database\IRepository.cs" />
+    <Compile Include="Database\IUsersRepository.cs" />
+    <Compile Include="Database\Repository.cs" />
+    <Compile Include="Database\UserContext.cs" />
+    <Compile Include="Database\UserRepository.cs" />
+    <Compile Include="Model\BotWorker.cs" />
+    <Compile Include="Model\Commands\Command.cs" />
+    <Compile Include="Model\Commands\NoCommand.cs" />
+    <Compile Include="Model\Commands\ResetCommand.cs" />
+    <Compile Include="Model\Commands\StartCommand.cs" />
+    <Compile Include="Model\Enums\SearchOptions.cs" />
+    <Compile Include="Model\MessageHandler.cs" />
+    <Compile Include="Model\StateMachine\IGotCallbackQuery.cs" />
+    <Compile Include="Model\StateMachine\StateAge.cs" />
+    <Compile Include="Model\StateMachine\StateCity.cs" />
+    <Compile Include="Model\StateMachine\StateCountry.cs" />
+    <Compile Include="Model\StateMachine\StateName.cs" />
+    <Compile Include="Model\StateMachine\StatePicture.cs" />
+    <Compile Include="Model\StateMachine\StateSearchSex.cs" />
+    <Compile Include="Model\StateMachine\StateSearchShow.cs" />
+    <Compile Include="Model\StateMachine\StateSex.cs" />
+    <Compile Include="Model\StateMachine\StateHello.cs" />
+    <Compile Include="Model\StateMachine\State.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Models\Enums\State.cs" />
-    <Compile Include="Models\User.cs" />
+    <Compile Include="Model\User.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
