--- a/TelegramDating/packages.config
+++ b/TelegramDating/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Castle.Core" version="4.2.0" targetFramework="net461" />
+  <package id="Castle.Windsor" version="4.1.1" targetFramework="net461" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
   <package id="System.Net.Requests" version="4.3.0" targetFramework="net461" />
