Resolve #24: Add `Likes` table, `Like` entity class. Resolve #19: Easy fix at the top of the HandleMessage() method.

--- a/TelegramDating/TelegramDating.csproj
+++ b/TelegramDating/TelegramDating.csproj
@@ -83,6 +83,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Model\Commands\AskActions\AskAbout.cs" />
+    <Compile Include="Model\Like.cs" />
     <Compile Include="ProfileCreatingExt.cs" />
     <Compile Include="Container.cs" />
     <Compile Include="Database\UserContext.cs" />
