--- a/TelegramDating/TelegramDating.csproj
+++ b/TelegramDating/TelegramDating.csproj
@@ -82,14 +82,16 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Extensions\CallbackKeyboardExt.cs" />
     <Compile Include="Model\Commands\AskActions\AskAbout.cs" />
+    <Compile Include="Model\Commands\AskActions\IGotCallbackQuery.cs" />
     <Compile Include="Model\Like.cs" />
-    <Compile Include="ProfileCreatingExt.cs" />
+    <Compile Include="Extensions\ProfileCreatingExt.cs" />
     <Compile Include="Container.cs" />
     <Compile Include="Database\UserContext.cs" />
     <Compile Include="Database\Installer.cs" />
-    <Compile Include="Global\EmojiConsts.cs" />
-    <Compile Include="Global\MessageFormatter.cs" />
+    <Compile Include="Shared\EmojiConsts.cs" />
+    <Compile Include="Extensions\MessageFormatter.cs" />
     <Compile Include="Database\Migrations\Configuration.cs" />
     <Compile Include="Model\BotWorker.cs" />
     <Compile Include="Model\Commands\AskActions\AskAction.cs" />
@@ -112,8 +114,8 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Model\User.cs" />
-    <Compile Include="TelegramUpdateEventArgsExt.cs" />
-    <Compile Include="UserExt.cs" />
+    <Compile Include="Extensions\TelegramUpdateEventArgsExt.cs" />
+    <Compile Include="Extensions\UserExt.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config">
