--- a/TelegramDating/TelegramDating.csproj
+++ b/TelegramDating/TelegramDating.csproj
@@ -83,8 +83,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Extensions\CallbackKeyboardExt.cs" />
+    <Compile Include="Extensions\ObjectExt.cs" />
     <Compile Include="Model\Commands\AskActions\AskAbout.cs" />
     <Compile Include="Model\Commands\AskActions\IGotCallbackQuery.cs" />
+    <Compile Include="Model\Commands\Slash\HelpCommand.cs" />
     <Compile Include="Model\Like.cs" />
     <Compile Include="Extensions\ProfileCreatingExt.cs" />
     <Compile Include="Container.cs" />
