Fix #45: Пофиксить неймспейсы и файловую структуру.

--- a/TelegramDating/TelegramDating.csproj
+++ b/TelegramDating/TelegramDating.csproj
@@ -84,9 +84,9 @@
   <ItemGroup>
     <Compile Include="Extensions\CallbackKeyboardExt.cs" />
     <Compile Include="Extensions\ObjectExt.cs" />
-    <Compile Include="Model\Commands\AskActions\AskAbout.cs" />
-    <Compile Include="Model\Commands\AskActions\IGotCallbackQuery.cs" />
-    <Compile Include="Model\Commands\Slash\HelpCommand.cs" />
+    <Compile Include="Bot\Commands\AskActions\AskAbout.cs" />
+    <Compile Include="Bot\Commands\AskActions\IGotCallbackQuery.cs" />
+    <Compile Include="Bot\Commands\Slash\HelpCommand.cs" />
     <Compile Include="Model\Like.cs" />
     <Compile Include="Extensions\ProfileCreatingExt.cs" />
     <Compile Include="Container.cs" />
@@ -95,24 +95,24 @@
     <Compile Include="Shared\EmojiConsts.cs" />
     <Compile Include="Extensions\MessageFormatter.cs" />
     <Compile Include="Database\Migrations\Configuration.cs" />
-    <Compile Include="Model\BotWorker.cs" />
-    <Compile Include="Model\Commands\AskActions\AskAction.cs" />
-    <Compile Include="Model\Commands\AskActions\AskAge.cs" />
-    <Compile Include="Model\Commands\AskActions\AskCity.cs" />
-    <Compile Include="Model\Commands\AskActions\AskCountry.cs" />
-    <Compile Include="Model\Commands\AskActions\AskName.cs" />
-    <Compile Include="Model\Commands\AskActions\AskPicture.cs" />
-    <Compile Include="Model\Commands\AskActions\AskSearchSex.cs" />
-    <Compile Include="Model\Commands\AskActions\AskSex.cs" />
-    <Compile Include="Model\Commands\Command.cs" />
-    <Compile Include="Model\Commands\Slash\MyProfileCommand.cs" />
-    <Compile Include="Model\Commands\Slash\NoCommand.cs" />
-    <Compile Include="Model\Commands\Slash\ResetCommand.cs" />
-    <Compile Include="Model\Commands\Slash\SlashCommand.cs" />
-    <Compile Include="Model\Commands\Slash\StartCommand.cs" />
-    <Compile Include="Model\Enums\ProfileCreatingEnum.cs" />
-    <Compile Include="Model\Enums\SearchOptions.cs" />
-    <Compile Include="Model\MessageHandler.cs" />
+    <Compile Include="Bot\BotWorker.cs" />
+    <Compile Include="Bot\Commands\AskActions\AskAction.cs" />
+    <Compile Include="Bot\Commands\AskActions\AskAge.cs" />
+    <Compile Include="Bot\Commands\AskActions\AskCity.cs" />
+    <Compile Include="Bot\Commands\AskActions\AskCountry.cs" />
+    <Compile Include="Bot\Commands\AskActions\AskName.cs" />
+    <Compile Include="Bot\Commands\AskActions\AskPicture.cs" />
+    <Compile Include="Bot\Commands\AskActions\AskSearchSex.cs" />
+    <Compile Include="Bot\Commands\AskActions\AskSex.cs" />
+    <Compile Include="Bot\Commands\Command.cs" />
+    <Compile Include="Bot\Commands\Slash\MyProfileCommand.cs" />
+    <Compile Include="Bot\Commands\Slash\NoCommand.cs" />
+    <Compile Include="Bot\Commands\Slash\ResetCommand.cs" />
+    <Compile Include="Bot\Commands\Slash\SlashCommand.cs" />
+    <Compile Include="Bot\Commands\Slash\StartCommand.cs" />
+    <Compile Include="Enums\ProfileCreatingEnum.cs" />
+    <Compile Include="Enums\SearchOptions.cs" />
+    <Compile Include="Bot\MessageHandler.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Model\User.cs" />
