--- a/TelegramDating/TelegramDating.csproj
+++ b/TelegramDating/TelegramDating.csproj
@@ -82,11 +82,13 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Bot\Installer.cs" />
     <Compile Include="Extensions\CallbackKeyboardExt.cs" />
     <Compile Include="Extensions\ObjectExt.cs" />
     <Compile Include="Bot\Commands\AskActions\AskAbout.cs" />
     <Compile Include="Bot\Commands\AskActions\IGotCallbackQuery.cs" />
     <Compile Include="Bot\Commands\Slash\HelpCommand.cs" />
+    <Compile Include="Model\Entity.cs" />
     <Compile Include="Model\Like.cs" />
     <Compile Include="Extensions\ProfileCreatingExt.cs" />
     <Compile Include="Container.cs" />
