--- a/TelegramDating.Tests/TelegramDating.Tests.csproj
+++ b/TelegramDating.Tests/TelegramDating.Tests.csproj
@@ -59,7 +59,6 @@
   <ItemGroup>
     <Compile Include="CallbackKeyboardExt_Test.cs" />
     <Compile Include="ObjectExt_Test.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\TelegramDating\TelegramDating.csproj">
@@ -70,6 +69,9 @@
   <ItemGroup>
     <None Include="app.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Properties\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
